# TactilityApps

.github/workflows/: main.yml
Apps/Magic8Ball/: manifest.properties
Apps/ThermalCamera/: CMakeLists.txt  README.md  manifest.properties
Apps/ThermalCamera/main/: CMakeLists.txt
Apps/ThermalCamera/main/Source/: ThermalCamera.h  main.c  mlx90640.c  mlx90640.h
